MYPLAN-1913 fixed link color for accessibility contrast ratio.

--- a/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/ks-myplan/jquery-popover/jquery.popover.css
+++ b/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/ks-myplan/jquery-popover/jquery.popover.css
@@ -202,6 +202,6 @@
 
 .jquerypopover-myplan-help .jquerypopover-innerHtml a,
 .jquerybubblepopup-myplan-help .jquerybubblepopup-innerHtml a {
-    color: #83def7;
+    color: #9be4f9;
     text-decoration: underline;
 }
